--- a/public/index.html
+++ b/public/index.html
@@ -8,7 +8,7 @@
 
 	<link rel='icon' type='image/png' href='./favicon.png'>
 	<link rel="stylesheet" href="./static/leaflet.css" />
-	<script src="./static/leaflet.js"></script>
+	<script src="./static/leaflet-src.js"></script>
 
 	<link rel='stylesheet' href='./static/global.css'>
 
