--- a/public/index.html
+++ b/public/index.html
@@ -9,6 +9,10 @@
 	<link rel='icon' type='image/png' href='./favicon.png'>
 	<link rel="stylesheet" href="./static/leaflet.css" />
 	<script src="./static/leaflet-src.js"></script>
+	<link rel="stylesheet" href="./static/pikaday.css" />
+	<script src="./static/pikaday.js"></script>
+ 	<script src="./static/heatmap.js"></script>
+ 	<script src="./static/leaflet-heatmap.js"></script>
 
 	<link rel='stylesheet' href='./static/global.css'>
 
