--- a/public/index.html
+++ b/public/index.html
@@ -6,6 +6,7 @@
 
 	<title>DTP app</title>
 
+	<link rel="stylesheet" href="./static/all.css">
 	<link rel='icon' type='image/png' href='./favicon.png'>
 	<link rel="stylesheet" href="./static/leaflet.css" />
 	<script src="./static/leaflet-src.js"></script>
