--- a/public/arm.html
+++ b/public/arm.html
@@ -4,7 +4,7 @@
 	<meta charset='utf-8'>
 	<meta name='viewport' content='width=device-width,initial-scale=1'>
 
-	<title>DTP app</title>
+	<title>Рабочее место аналитика ДТП</title>
 
 	<link rel="stylesheet" href="./static/all.css">
 	<link rel='icon' type='image/png' href='./favicon.png'>
@@ -17,8 +17,8 @@
 
 	<link rel='stylesheet' href='./static/global.css'>
 
-	<link rel='stylesheet' href='./build/main.css'>
-	<script defer src='./build/main.js'></script>
+	<link rel='stylesheet' href='./build/arm.css'>
+	<script defer src='./build/arm.js'></script>
 </head>
 
 <body>
