--- a/public/index.html
+++ b/public/index.html
@@ -12,6 +12,8 @@
 	<script src="./static/leaflet-src.js"></script>
 	<link rel="stylesheet" href="./static/pikaday.css" />
 	<script src="./static/pikaday.js"></script>
+	<link rel="stylesheet" href="./static/leaflet-geoman.css" />
+	<script src="./static/leaflet-geoman.min.js"></script>
  	<!-- script src="./static/heatmap.js"></script>
  	<script src="./static/leaflet-heatmap.js"></script -->
 
