--- a/public/index.html
+++ b/public/index.html
@@ -14,8 +14,8 @@
 	<script src="./static/pikaday.js"></script>
 	<link rel="stylesheet" href="./static/leaflet-geoman.css" />
 	<script src="./static/leaflet-geoman.min.js"></script>
- 	<!-- script src="./static/heatmap.js"></script>
- 	<script src="./static/leaflet-heatmap.js"></script -->
+ 	<!-- script src="./static/heatmap.js"></script -->
+ 	<script src="./static/leaflet-heat.js"></script>
 
 	<link rel='stylesheet' href='./static/global.css'>
 
