--- a/public/arm.html
+++ b/public/arm.html
@@ -6,6 +6,7 @@
 
 	<title>Рабочее место аналитика ДТП</title>
 
+	<script src="//cdn.dashjs.org/v3.1.0/dash.all.debug.js"></script>
 	<link rel="stylesheet" href="./static/all.css">
 	<link rel='icon' type='image/png' href='./favicon.png'>
 	<link rel="stylesheet" href="./static/leaflet.css" />
