--- a/public/arm.html
+++ b/public/arm.html
@@ -13,8 +13,8 @@
 	<script src="./static/leaflet-src.js"></script>
 	<link rel="stylesheet" href="./static/pikaday.css" />
 	<script src="./static/pikaday.js"></script>
- 	<!-- script src="./static/heatmap.js"></script>
- 	<script src="./static/leaflet-heatmap.js"></script -->
+
+ 	<script src="./static/leaflet-heat.js"></script>
 
 	<link rel='stylesheet' href='./static/global.css'>
 
